--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mocha": "~1.11.0",
     "chai": "~1.7.1",
     "grunt": "~0.4.1",
-    "express": "~3.3.1"
+    "express": "~3.3.1",
+    "grunt-simple-mocha": "~0.4.0",
+    "grunt-contrib-jshint": "~0.6.0"
   },
   "dependencies": {
     "tagfinder": "~0.0.1",
