--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "grunt-dustjs": "~0.2.2",
     "grunt-simple-mocha": "~0.4.0",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0"
+    "grunt-contrib-jshint": "~0.6.0",
+    "dustjs-linkedin": "~2.0.0",
+    "express-dustjs": "~0.0.10"
   },
   "dependencies": {
     "tagfinder": "~0.0.6",
