--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tagfinder": "~0.0.7",
     "ent": "0.0.5",
     "q": "~0.9.6",
-    "tater": "0.0.1"
+    "tater": "0.0.1",
+    "objutil": "~0.3.1"
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
