--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dustjs-i18n",
+  "name": "makara",
   "version": "0.3.0",
   "description": "i18n support for dust.js templates",
   "main": "index.js",
@@ -16,6 +16,8 @@
   "keywords": [
     "dust.js",
     "i18n",
+    "internationalization",
+    "localization",
     "templates"
   ],
   "author": "Erik Toth <ertoth@paypal.com>",
@@ -38,10 +40,10 @@
     "express-dustjs": "~0.1.2"
   },
   "dependencies": {
-    "tagfinder": "~0.0.8",
+    "findatag": "~0.0.8",
     "ent": "0.0.5",
     "q": "~0.9.6",
-    "tater": "~0.0.2"
+    "spud": "~0.0.2"
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
