--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "dustjs-linkedin": "~2.0.0",
+    "dustjs-helpers": "~1.1.1",
     "express-dustjs": "~0.1.2"
   },
   "dependencies": {
