--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "dustjs-linkedin": "~2.0.0",
-    "adaro": "~0.1.2"
+    "dustjs-helpers": "~1.1.1",
+    "adaro": "~0.1.4"
   },
   "dependencies": {
     "findatag": "~0.0.8",
@@ -47,6 +48,6 @@
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
-    "adaro": "~0.1.2"
+    "adaro": "~0.1.4"
   }
 }
