--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "type": "git",
     "url": "https://github.paypal.com/webcore/dustjs-i18n.git"
   },
-  "publishConfig": {
-    "registry": "http://npm.paypal.com"
-  },
   "keywords": [
     "dust.js",
     "i18n",
@@ -21,6 +18,36 @@
     "templates"
   ],
   "author": "Erik Toth <ertoth@paypal.com>",
+  "contributors": [
+    {
+      "name": "Richard Ragan",
+      "email": "rragan@paypal.com"
+    },
+    {
+      "name": "Stephen Westhafer",
+      "email": "swesthafer@paypal.com"
+    },
+    {
+      "name": "Lenny Markus",
+      "email": "lmarkus@paypal.com"
+    },
+    {
+      "name": "Jeff Harrell",
+      "email": "jharrell@paypal.com"
+    },
+    {
+      "name": "Jean-Charles Sisk",
+      "email": "jsisk@paypal.com"
+    },
+    {
+      "name": "Sanjeev Koranga",
+      "email": "skoranga@paypal.com"
+    },
+    {
+      "name": "Dereck Quock",
+      "email": "dquock@paypal.com"
+    }
+  ],
   "licenses": [
     {
       "type": "Apache 2.0",
