setting correct repo

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.paypal.com/webcore/dustjs-i18n.git"
+    "url": "https://github.paypal.com/webcore/makara.git"
   },
   "keywords": [
     "dust.js",
