--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "grunt-contrib-jshint": "~0.6.0",
     "dustjs-linkedin": "~2.0.0",
     "dustjs-helpers": "~1.1.1",
-    "adaro": "~0.1.4"
+    "adaro": "~0.1.4",
+    "graceful-fs": "2.0.1"
   },
   "dependencies": {
     "findatag": "~0.0.8",
