--- a/.jshintrc
+++ b/.jshintrc
@@ -26,7 +26,7 @@
     "curly": true,
     "eqeqeq": true,
     "eqnull": false,
-    "evil": false,
+    "evil": true,
     "expr": true,
     "forin": false,
     "immed": true,
