--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "ent": "0.0.5",
     "q": "~0.9.6",
     "spud": "~0.0.2",
-    "graceful-fs": "~2.0.1"
+    "graceful-fs": "~2.0.1",
+    "through2": "~0.4.1",
+    "vinyl": "~0.2.3"
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
