--- a/package.json
+++ b/package.json
@@ -65,16 +65,19 @@
     "grunt-contrib-jshint": "~0.6.0",
     "dustjs-linkedin": "~2.0.0",
     "dustjs-helpers": "~1.1.1",
-    "adaro": "~0.1.4"
+    "adaro": "~0.1.4",
+    "gulp": "~3.5.6",
+    "gulp-dust": "~0.2.0",
+    "gulp-clean": "~0.2.4",
+    "through2": "~0.4.1",
+    "vinyl": "~0.2.3"
   },
   "dependencies": {
     "findatag": "~0.0.8",
     "ent": "0.0.5",
     "q": "~0.9.6",
     "spud": "~0.0.2",
-    "graceful-fs": "~2.0.1",
-    "through2": "~0.4.1",
-    "vinyl": "~0.2.3"
+    "graceful-fs": "~2.0.1"
   },
   "peerDependencies": {
     "dustjs-linkedin": "~2.0.0",
