--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/paypal/makara.git"
+    "url": "https://github.com/krakenjs/makara.git"
   },
   "keywords": [
     "dust.js",
@@ -33,7 +33,7 @@
     },
     {
       "name": "Jeff Harrell",
-      "email": "jharrell@paypal.com"
+      "email": "jeharrell@paypal.com"
     },
     {
       "name": "Jean-Charles Sisk",
