--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "adaro": "~0.1.4"
   },
   "dependencies": {
-    "findatag": "~0.0.8",
+    "findatag": "^1.0.0",
     "graceful-fs": "~2.0.1",
-    "he": "~0.4.1",
     "grunt-localizr": "^0.1.0",
+    "he": "~0.4.1",
     "q": "~0.9.6",
     "spud": "~0.0.3"
   },
