--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js:
+  - "0.12"
   - "0.10"
+  - "iojs"
+  - "iojs-v1.1.0"
+  
 before_script:
   - npm install -g grunt-cli
