--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "grunt-localizr": "^0.2.0",
     "he": "~0.4.1",
     "q": "~0.9.6",
-    "spud": "~0.0.3"
+    "spud": "^1.0.0"
   },
   "peerDependencies": {
     "dustjs-linkedin": "^2.0.0",
