--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   ],
   "devDependencies": {
     "adaro": "~0.1.4",
-    "chai": "~1.7.1",
+    "chai": "^2.0.0",
     "dustjs-helpers": "~1.1.1",
     "dustjs-linkedin": "^2.0.0",
     "express": "~3.4.x",
