--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "graceful-fs": "~3.0.1",
     "grunt-localizr": "^0.2.0",
     "he": "^0.5.0",
-    "q": "~0.9.6",
+    "bluebird-q": "^1.0.0",
     "spud": "^1.0.0"
   },
   "peerDependencies": {
