--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "express": "~3.4.x",
     "grunt": "~0.4.1",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-dustjs": "~0.2.2",
     "grunt-simple-mocha": "~0.4.0",
