--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-dustjs": "~0.2.2",
     "grunt-simple-mocha": "~0.4.0",
-    "mocha": "~1.11.0"
+    "mocha": "^2.0.0"
   },
   "dependencies": {
     "findatag": "^1.0.0",
