--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "grunt": "~0.4.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-dustjs": "^1.2.1",
     "grunt-simple-mocha": "~0.4.0",
     "mocha": "^2.0.0"
