--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "chai": "^2.0.0",
     "dustjs-helpers": "~1.5.0",
     "dustjs-linkedin": "~2.5.0",
-    "express": "~3.4.x",
+    "express": "^3.4.0",
     "grunt": "~0.4.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
