--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "grunt-simple-mocha": "~0.4.0",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
-    "dustjs-linkedin": "^2.0.0",
-    "dustjs-helpers": "~1.1.1",
+    "dustjs-linkedin": "~2.6.0",
+    "dustjs-helpers": "~1.6.0",
     "adaro": "~0.1.4"
   },
   "dependencies": {
