Add bundler support

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   },
   "dependencies": {
     "adaro": "^1.0.0-9",
-    "engine-munger": "v1.0.0-2"
+    "bundalo": "^0.2.9",
+    "engine-munger": "v1.0.0-3",
+    "es6-weak-map": "^1.0.2"
   }
 }
