--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "adaro": "^1.0.0",
     "aproba": "^1.0.1",
     "bundalo": "^0.2.9",
-    "engine-munger": "v1.0.0",
+    "engine-munger": "^1.0.0",
     "es6-weak-map": "^1.0.2"
   }
 }
