--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
   - "0.12"
   - "0.10"
-  - "iojs"
-  - "iojs-v1.1.0"
-  
-before_script:
-  - npm install -g grunt-cli
+  - "4"
+  - "5"
+
+sudo: false
